[package]
name = "swordgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.10.1"
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
matchbox_socket = "0.6.0"
bytemuck = { version = "1.7", features=["derive"]}
serde = "1.0.160"
wasm-bindgen = "0.2.84"
bevy_asset_loader = "0.16.0"

[profile.release]
lto = "thin"
opt-level = 's'