[package]
name = "fightgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }
# bevy_matchbox_nostr = { version = "0.6.1", features = ["ggrs"] }
bevy_matchbox_nostr = { path = "/Users/stu/stuff/matchbox_nostr/bevy_matchbox_nostr", version = "0.6.1", features = ["ggrs"] }
bytemuck = { version = "1.13.1", features=["derive"]}
serde = "1.0.160"
bevy_asset_loader = "0.16.0"
log = "0.4"
console_log = { version = "1"}
nostr-sdk = "0.21"
wasm-bindgen-futures = "0.4"


[profile.release]
lto = "thin"
opt-level = 'z'
